ajuste link veiculo-detalhes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="info">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-              <a class="btn" href="#">Mais informações</a>
+              <a class="btn" href="veiculo-detalhes.html">Mais informações</a>
             </div>
             <!--info-->
           </div>
@@ -92,7 +92,7 @@
             <div class="info">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-              <a class="btn" href="#">Mais informações</a>
+              <a class="btn" href="veiculo-detalhes.html">Mais informações</a>
             </div>
             <!--info-->
           </div>
@@ -103,7 +103,7 @@
             <div class="info">
               <h3>Lorem Ipsum</h3>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-              <a class="btn" href="#">Mais informações</a>
+              <a class="btn" href="veiculo-detalhes.html">Mais informações</a>
             </div>
             <!--info-->
           </div>
