--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a class="selected" href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="venda.html">Vendas</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
         <!--menu-desktop-->
@@ -42,7 +42,7 @@
             <li><a class="selected" href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="venda.html">Vendas</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
         <!--menu-mobile-->
@@ -231,7 +231,7 @@
             <li><a class="selected" href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="venda.html">Vendas</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
         <p>Todos os direitos reservados © Wesley Jacques</p>
