--- a/venda.html
+++ b/venda.html
@@ -33,7 +33,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a class="selected" href="venda.html">Vendas</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
         <!--menu-desktop-->
@@ -42,7 +42,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a class="selected" href="venda.html">Vendas</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
         <!--menu-mobile-->
@@ -219,7 +219,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a class="selected" href="venda.html">Vendas</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
         <p>Todos os direitos reservados © Wesley Jacques</p>
