add funcionalidade para barra de filtro de precos

--- a/venda.html
+++ b/venda.html
@@ -20,6 +20,8 @@
       href="css/fontawesome-free-5.15.4-web/css/all.min.css"
     />
     <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" />
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="js/function.js"></script>
   </head>
 
   <body>
@@ -73,7 +75,7 @@
               </div>
               <!--barra-preco-->
               <div class="valor-pesquisa">
-                <p>R$0,0</p>
+                <p class="preco-pesquisa">R$0,0</p>
                 <p>R$90.000,00</p>
               </div>
               <!--valor-pesquisa-->
