--- a/sobre.html
+++ b/sobre.html
@@ -120,5 +120,7 @@
       </div>
       <!--container-->
     </footer>
+    <script src="js/function.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
