--- a/veiculo-detalhes.html
+++ b/veiculo-detalhes.html
@@ -213,5 +213,7 @@
       </div>
       <!--container-->
     </footer>
+    <script src="js/function.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
