initial ajuste maps

--- a/contato.html
+++ b/contato.html
@@ -74,13 +74,13 @@
           <div class="maps-single">
             <div id="mapa" class="map"></div>
           </div>
-          <!--depoimento-single-->
+          <!--maps-single-->
         </div>
       </div>
-      <!--depoimento-->
+      <!--maps-->
       <div class="clear"></div>
     </section>
-    <!--local-depoimento-->
+    <!--local-maps-->
 
     <section class="contato">
       <div class="container">
