--- a/contato.html
+++ b/contato.html
@@ -32,7 +32,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="venda.html">Vendas</a></li>
+            <!--<li><a href="venda.html">Vendas</a></li>-->
             <li><a class="selected" href="contato.html">Contato</a></li>
           </ul>
         </nav>
@@ -149,7 +149,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="venda.html">Vendas</a></li>
+            <!--<li><a href="venda.html">Vendas</a></li>-->
             <li><a class="selected" href="contato.html">Contato</a></li>
           </ul>
         </nav>
