--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul>
             <li><a class="selected" href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="venda.html">Vendas</a></li>
+            <!--<li><a href="venda.html">Vendas</a></li>-->
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
@@ -230,7 +230,7 @@
           <ul>
             <li><a class="selected" href="index.html">Home</a></li>
             <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="venda.html">Vendas</a></li>
+            <!--<li><a href="venda.html">Vendas</a></li>-->
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
