--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="selected" href="sobre.html">Sobre</a></li>
-            <li><a href="venda.html">Vendas</a></li>
+            <!--<li><a href="venda.html">Vendas</a></li>-->
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
@@ -111,7 +111,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="selected" href="sobre.html">Sobre</a></li>
-            <li><a href="venda.html">Vendas</a></li>
+            <!--<li><a href="venda.html">Vendas</a></li>-->
             <li><a href="contato.html">Contato</a></li>
           </ul>
         </nav>
